[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomizer-sim"
version = "0.1.0"
description = "3D atomizer spray simulation and audio preview for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
    "PyOpenGL>=3.1.7",
    "pyqtgraph>=0.13.7",
    "PySide6>=6.8.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]

[project.scripts]
atomizer-sim = "atomizer_sim.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]